src/test/ui/libstd-case-typo/path.stderr
error[E0412]: cannot find type `ancestors` in this scope
  --> $DIR/path.rs:4:19
   |
LL | fn test_ances(_x: ancestors){}
   |                   ^^^^^^^^^
   |                   |
   |                   not found in this scope
   |                   help: found a std struct with a similar name: `std::path::Ancestors`

error[E0412]: cannot find type `components` in this scope
  --> $DIR/path.rs:6:18
   |
LL | fn test_comp(_x: components){}
   |                  ^^^^^^^^^^
   |                  |
   |                  not found in this scope
   |                  help: found a std struct with a similar name: `std::path::Components`

error[E0412]: cannot find type `Pathbuf` in this scope
  --> $DIR/path.rs:8:21
   |
LL | fn test_pathbuf(_x: Pathbuf){}
   |                     ^^^^^^^
   |                     |
   |                     not found in this scope
   |                     help: found a std struct with a similar name: `std::path::PathBuf`

error[E0412]: cannot find type `Prefixcomponent` in this scope
  --> $DIR/path.rs:10:19
   |
LL | fn test_pcomp(_x: Prefixcomponent){}
   |                   ^^^^^^^^^^^^^^^
   |                   |
   |                   not found in this scope
   |                   help: found a std struct with a similar name: `std::path::PrefixComponent`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0412`.
